k8s/orderservice-deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: orderservice-deployment
  namespace: ms-ecom-application
  labels:
    app: order-service
    tier: backend
  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
      tier: backend

  template:
    metadata:
      name: orderservice-pod
      labels:
        app: order-service
        tier: backend

    spec:
      containers:
        - name: order-service
          image: hackerspider09/ecom-orderservice:latest
          ports:
            - containerPort: 8082
