k8s/productservice-deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: productservice-deployment
  namespace: ms-ecom-application
  labels:
    app: product-service
    tier: backend
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
      tier: backend

  template:
    metadata:
      name: productservice-pod
      labels:
        app: product-service
        tier: backend

    spec:
      containers:
        - name: product-service
          image: hackerspider09/ecom-productservice:latest
          ports:
            - containerPort: 3001
