k8s/userservice-db.yaml
kind: Service
apiVersion: v1
metadata:
  name: userdb-service
  namespace: ms-ecom-application
  labels:
    app: user-db
    tier: db

spec:
  clusterIP: None
  selector:
    app: user-db
    tier: db

  ports:
  - port: 5432

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: userdb-st 
  namespace: ms-ecom-application
  labels:
    app: user-db
    tier: db
spec:
  selector:
    matchLabels:
      app: user-db
      tier: db
  
  replicas: 1
  serviceName: userdb-service  
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      name: userdb-pod
      labels:
        app: user-db
        tier: db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: userdb
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
