k8s/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ms-http-route
  namespace: ms-ecom-application
spec:
  parentRefs:
  - name: ms-gateway
  # hostnames:
  # - "app.example.com"
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: frontend-service
      port: 5173
